add find users with fullname cursor pagination and find user with id route
